made slight changes to notebook formatting

--- a/project_1/project_1/code/starter-code.ipynb
+++ b/project_1/project_1/code/starter-code.ipynb
@@ -52,8 +52,8 @@
     "* [SAT](https://collegereadiness.collegeboard.org/sat)\n",
     "* [ACT](https://www.act.org/content/act/en.html)\n",
     "\n",
-    "In a 2017 news article published by [EducationWeek](https://www.edweek.org/teaching-learning/in-race-for-test-takers-act-outscores-sat-for-now/2017/05), ACT had been the most popular test to predict college performance since 2012. Below is an image showing the popularity trend between ACT and SAT from 1986 to 2016:\n",
-    "<img src=\"https://epe.brightspotcdn.com/dims4/default/1252f2e/2147483647/strip/true/crop/280x130+0+0/resize/280x130!/format/webp/quality/90/?url=https%3A%2F%2Fepe-brightspot.s3.amazonaws.com%2F5a%2Fe5%2Fcf9797cc8f082dd175715ad77c00%2F32-sr-assessment-sat-act-graph-c1s.jpg\">\n",
+    "In a 2017 news article published by [EducationWeek](https://www.edweek.org/teaching-learning/in-race-for-test-takers-act-outscores-sat-for-now/2017/05), ACT had been the most popular test to predict college performance since 2012. Below is an image showing the popularity trend between ACT and SAT from 1986 to 2016:<br>\n",
+    "<img src=\"https://epe.brightspotcdn.com/dims4/default/1252f2e/2147483647/strip/true/crop/280x130+0+0/resize/280x130!/format/webp/quality/90/?url=https%3A%2F%2Fepe-brightspot.s3.amazonaws.com%2F5a%2Fe5%2Fcf9797cc8f082dd175715ad77c00%2F32-sr-assessment-sat-act-graph-c1s.jpg\"><br>\n",
     "<center>Source: ACT Inc. and College Board</center>\n",
     "Given the datasets chosen above, we can verify if this is truly the case. The aim of this project also seeks to conduct a comparison in respect to the participation rates and mean scores attained by each state to uncover and understand the trends.\n"
    ]
@@ -7217,7 +7217,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -7231,7 +7231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
