reverting the change

--- a/project_1/project_1/code/starter-code.ipynb
+++ b/project_1/project_1/code/starter-code.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "In a 2017 news article published by [EducationWeek](https://www.edweek.org/teaching-learning/in-race-for-test-takers-act-outscores-sat-for-now/2017/05), ACT had been the most popular test to predict college performance since 2012. Below is an image showing the popularity trend between ACT and SAT from 1986 to 2016:<br>\n",
     "<img src=\"https://epe.brightspotcdn.com/dims4/default/1252f2e/2147483647/strip/true/crop/280x130+0+0/resize/280x130!/format/webp/quality/90/?url=https%3A%2F%2Fepe-brightspot.s3.amazonaws.com%2F5a%2Fe5%2Fcf9797cc8f082dd175715ad77c00%2F32-sr-assessment-sat-act-graph-c1s.jpg\" align=\"center/\"><br>\n",
-    "<p style ='text-align: center';>Source: ACT Inc. and College Board</p><br>\n",
+    "<center>Source: ACT Inc. and College Board</center><br>\n",
     "Given the datasets chosen above, we can verify if this is truly the case. The aim of this project also seeks to conduct a comparison in respect to the participation rates and mean scores attained by each state to uncover and understand the trends.\n"
    ]
   },
