upload presentation slides and slight alteration to code

--- a/project_3/project_3/Project 3 - Final.ipynb
+++ b/project_3/project_3/Project 3 - Final.ipynb
@@ -4440,7 +4440,7 @@
     }
    ],
    "source": [
-    "# Number of SWE Posts in the X_train data set\n",
+    "# Number of Tea Posts in the X_train data set\n",
     "tea_train = pd.merge(X_train, tea_text, how='inner', on=['text'])\n",
     "print(tea_train.shape)\n",
     "tea_train"
@@ -4464,10 +4464,10 @@
     "# Lets use the stop_words argument to remove words like \"and, the, a\"\n",
     "cvec = CountVectorizer(min_df = 2, stop_words='english')\n",
     "\n",
-    "# Fit our vectorizer into our data science posts in our dataframe\n",
+    "# Fit our vectorizer into our tea posts in our dataframe\n",
     "cvec.fit(tea_train['text'])\n",
     "\n",
-    "# Total number of features (words) in Data Science Subreddit posts in our X_train\n",
+    "# Total number of features (words) in Tea Subreddit posts in our X_train\n",
     "print('Number of features without stop words: {}'.format(len(cvec.get_feature_names())))"
    ]
   },
